# STranslate

./: .gitignore  7z.ps1  CHANGELOG.md  CleanDlls.bat  ClearCache.bat  CopyUpdater.bat  Directory.Build.props  Directory.Packages.props  LICENSE  PRIVACY.md  README.md  README_EN.md  README_ZH.md  STranslate.sln  Sponsor.md  UpgradeLog.htm  cleanocr.ps1  clearocr.bat  installer.ps1  micasetup.json  nuget.config  publish.bat  publish.ps1  version-info.json
STranslate.Common/: ConfigHelper.cs  STranslate.Common.csproj  ShortcutHelper.cs  SqliteHelper.cs
STranslate.Log/: STranslate.Log.csproj  SerilogLogger.cs
STranslate.Model/: ConfigModel.cs  ConstStr.cs  DeeplModel.cs  EcdictModel.cs  Enums.cs  HistoryModel.cs  Hotkeys.cs  ITTS.cs  ITranslator.cs  ITranslatorAI.cs  LanguageEnum.cs  ModelApi.cs  ModelBaidu.cs  ModelBing.cs  NotifyIconModel.cs  OpenaiMessage.cs  Prompt.cs  STranslate.Model.csproj  SqliteModel.cs  TranslationResult.cs  WidthConverter.cs  packages.config
STranslate.Settings/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  STranslate.Settings.csproj
STranslate.Style/: STranslate.Style.csproj
STranslate.Updater/: App.xaml.cs  GithubRelease.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  STranslate.Updater.csproj  Unzip.cs
STranslate.Util/: CommonUtil.cs  DESUtil.cs  GetWordsUtil.cs  GoUtil.cs  HttpUtil.cs  MemoUtil.cs  ObjectExtensions.cs  ProxyUtil.cs  RegistryMonitor.cs  STranslate.Util.csproj  ShortcutUtil.cs  SingletonUtil.cs  StringUtil.cs  volcengine.h  (+1 more)
src/STranslate.Host/: Cargo.toml
src/STranslate.Host/src/: main.rs
(+817 files in other folders)
