[package]
name = "z_stranslate_host"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi"] }